# serial-cross-platform

./: CMakeLists.txt  README.md  SerialLibraryConfig.cmake.in  serial.cpp  serial.h  serial_example.cpp
